log
Thu 09 May 2024 08:40:12 PM UTC: 
 tests:  1|8
total_score: 0/70
0f5cf19
Thu 09 May 2024 09:10:32 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
9b67084
Thu 09 May 2024 09:47:54 PM UTC: 
 treemap.c | 45 +++++++++++++++++++++++++++++++++++++++------
 1 file changed, 39 insertions(+), 6 deletions(-)
 tests:  6|6
total_score: 15/70
af80c10
Thu 09 May 2024 09:52:58 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
909c8e7
Thu 09 May 2024 09:56:31 PM UTC: 
 treemap.c | 31 ++++++++++++-------------------
 1 file changed, 12 insertions(+), 19 deletions(-)
In file included from test.c:4:
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
Compilation failed
781184c
Thu 09 May 2024 09:58:03 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1bd2c62
Thu 09 May 2024 10:03:41 PM UTC: 
 treemap.c | 33 +++++----------------------------
 1 file changed, 5 insertions(+), 28 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0adff51
Thu 09 May 2024 10:14:56 PM UTC: 
 treemap.c | 29 ++++++++++++++++++++++-------
 1 file changed, 22 insertions(+), 7 deletions(-)
 tests:  6|6
total_score: 15/70
ab28015
Thu 09 May 2024 10:21:59 PM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
a97fddd
Fri 10 May 2024 02:28:46 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
b43ce49
Fri 10 May 2024 03:23:48 AM UTC: 
 treemap.c | 72 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 71 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:137:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  137 |   else if(aux->left != NULL && aux->right == NULL || aux->left == NULL && aux->right != NULL)
      |                             ^
treemap.c:155:12: error: expected expression before ‘)’ token
  155 |         if()
      |            ^
cc1: all warnings being treated as errors
Compilation failed
b932144
Fri 10 May 2024 03:23:59 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:137:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  137 |   else if(aux->left != NULL && aux->right == NULL || aux->left == NULL && aux->right != NULL)
      |                             ^
cc1: all warnings being treated as errors
Compilation failed
fc3fea3
Fri 10 May 2024 03:24:09 AM UTC: 
 treemap.c | 102 +++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 51 insertions(+), 51 deletions(-)
 tests:  0|0
e510e97
Fri 10 May 2024 03:27:42 AM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++----------
 1 file changed, 25 insertions(+), 10 deletions(-)
 tests:  13|4
total_score: 30/70
7b3454a
Sat 11 May 2024 09:51:47 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|4
total_score: 30/70
7637b73
